username fixed and alignment changed

--- a/front-end/my-app/src/components/UserRow.css
+++ b/front-end/my-app/src/components/UserRow.css
@@ -40,6 +40,7 @@
 
 .user-name {
   font-weight: 600;
+  text-align: left;
 }
 
 .user-username {
